# Olio-ohjelmointi_kotitehtavat

./: README.md
Kotitehtava_1.1/: main.cpp
Kt_1_1/: CMakeLists.txt
Kt_1_2/: CMakeLists.txt  main.cpp
Kt_2/: CMakeLists.txt  game.cpp  game.h  main.cpp
Kt_3/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
Kt_4/: asunto.cpp  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
Kt_5/: katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
Kt_5_extra_1/: devicebaseclass.cpp  devicebaseclass.h  devicedisplay.cpp  devicedisplay.h  devicemouse.cpp  devicemouse.h  devicetouchpad.cpp  devicetouchpad.h  main.cpp  mydeviceui.cpp  mydeviceui.h
Kt_6/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Kt_6_extra/Kt_6_extra/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Kt_6_extra/build-Kt_6_extra-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
Kt_6_extra/build-Kt_6_extra-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
Kt_7/: mainwindow.cpp  mainwindow.h  mainwindow.ui
